# Reader

./: CMakeLists.txt  Reader_bsp.c  Reader_bsp.h  TestClass.cpp  TestClass.h  bitmap.c  bitmap.h  bsp.c  bsp.h  initialization.c  interrupts.c  interrupts_as.S  keypad.c  main.c  main.cpp  ui.cpp  ui.h
BSP/: bitmap.c  bitmap.h  bsp.c  bsp.h  debug.c  debug.h  debug_bsp.c  debug_bsp.h  initialization.c  initialization.h  input.h  keypad.h  linux_keys.h  music.h  printf.c  printf_config.h  qtouch.c  qtouch.h  sst26.c  sst26.h  tcp_port.c  tcp_port.h  ui.c  ui.h  version.h  virtual_term.c  virtual_term.h
BSP/Drivers/: driver_defs.h
BSP/Drivers/SPI/: spi_driver.c  spi_driver.h  spi_driver_config.h
BSP/PPP/: CMakeLists.txt  FreeRTOSConfig.h  board_defs.h  bsp.c  hal_config.h  initialization.c  interrupts.c  interrupts_as.S  keypad.c  led_matrix.c  led_matrix.h  os_port_config.h  qt1245.c  qt1245.h  qtouch.c  sst26.h
BSP/PPP/Ethernet/: CMakeLists.txt
BSP/PPP/Ethernet/common/: debug.h
BSP/PPP/Ethernet/cyclone_tcp/core/: bsd_socket_misc.c  ip.c  ip.h  raw_socket.c  socket.c
BSP/PPP/Ethernet/cyclone_tcp/igmp/: igmp_router.c  igmp_router_misc.c
BSP/PPP_EXT/: CMakeLists.txt  FreeRTOSConfig.h  board_defs.h  bsp.c  hal_config.h  interrupts.c  interrupts_as.S  keypad.c  net_config.h  qt1245.c  qt1245.h  spi_driver_config.h  sst26.c
BSP/PPP_EXT/Ethernet/: CMakeLists.txt
BSP/PPP_EXT/Ethernet/cyclone_tcp/core/: ethernet_misc.c  net.c
BSP/PPP_EXT/Ethernet/cyclone_tcp/drivers/mac/: pic32mz_eth_driver.c
BSP/PPP_EXT/Ethernet/cyclone_tcp/igmp/: igmp_common.c  igmp_host.c  igmp_snooping_misc.c
BSP/PPP_EXT/Ethernet/cyclone_tcp/ipv4/: auto_ip.c  ipv4_frag.c
BSP/Reader/: CMakeLists.txt  board_defs.h  bsp.c  initialization.c  interrupts.c  interrupts_as.S  keypad.c  os_port_config.h  qt1110.c  qtouch.c  spi_driver_config.h  sst26.c  sst26.h
BSP/Reader/Ethernet/: CMakeLists.txt
BSP/Reader/Ethernet/cyclone_tcp/core/: bsd_socket.c  socket_misc.c
BSP/Reader/Ethernet/cyclone_tcp/drivers/phy/: ksz8041_driver.c
BSP/Reader/Ethernet/cyclone_tcp/drivers/switch/: lan9303_driver.c  lan9303_driver.h
BSP/Reader/Ethernet/cyclone_tcp/igmp/: igmp_host_misc.c  igmp_snooping.c
BSP/Reader/Ethernet/cyclone_tcp/ipv4/: auto_ip_misc.c
BSP/Reader/Keypad/: keypad.c
BSP/Reader/Linker/: p32MZ1024EFM100.ld
BSP/Reader/QTouch/: qt1110.c  qt1110.h
BSP/Reader/Socket/: reader_socket.c  reader_socket.h
Drivers/: qtouch.c  qtouch.h
DynamicAlloc/: dynamic_alloc.cpp
FreeRTOS/: CMakeLists.txt
FreeRTOS/Source/include/: task.h
FreeRTOS/Source/portable/MPLAB/PIC32MX/: ISR_Support.h
HAL/: CMakeLists.txt  dma.c  dma.h  evic.c  evic.h  gpio.c  gpio.h  gpio_config.h  hal.h  hal_config.c  hal_config.h  hal_defs.h  hal_delay.c  hal_delay.h  hal_ring_buffer.c  hal_ring_buffer.h  oc.c  oc.h  pic32mz_registers.h  pps.h  spi.c  spi.h  system.c  system.h  timer.c  timer.h  uart.c  uart.h
HAL/PIC32MX795F512H/: CMakeLists.txt  dma.c  evic.c  evic.h  gpio.c  hal_delay.c  oc.c  pic32mx_registers.h  spi.c  system.c  timer.c  uart.c
HAL/PIC32MZEFM100/: CMakeLists.txt  dma.c  evic.h  hal_ring_buffer.c  pic32mz_registers.h  pps.c  spi.c  uart.c
LCD/: CMakeLists.txt  lcd.h  lm1076b_lcd.c
MVC_Test/DataTypes/: Bitmap.h  BitmapItem.cpp  BitmapItem.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  LogoItem.cpp  LogoItem.h  Observer.h
MVC_Test/Figures/: Box.cpp  Box.h  Composite.h  Drawable.h  Figure.cpp  Figure.h  ItemBox.cpp  ItemBox.h  Label.h  MenuWindow.cpp  MenuWindow.h  TextBox.cpp  Window.h
MVC_Test/Input/: input.cpp  input_cpp.h  virtual_term.cpp  virtual_term.h
MVC_Test/MVC/: Controller.cpp  Controller.h  ControllerInputEvent.h  MessagePacket.h  Model.cpp  Model.h  ModelStateService.h  StateMachine.h
MVC_Test/MVC/States/: StateLogo.cpp  StateLogo.h  StateLogoScreen.cpp  StateLogoScreen.h  StateMainMenu.cpp  StateMainMenu.h  StateOptionMenu.cpp  StateOptionMenu.h
MVC_Test/MVC/Views/: LogoView.cpp  LogoView.h  MenuView.cpp  MenuView.h  View.cpp  View.h  ViewService.cpp  ViewService.h
States/: State.cpp  State.h  StateDeviceEnter.cpp  StateDeviceEnter.h  StateIdle.cpp  StateIdle.h  StateMainMenu.cpp  StateMainMenu.h
Test_MVC/: CMakeLists.txt  Factory.h  InputController.cpp  InputController.h  TestStateMachine.cpp  TestStateMachine.h
Test_MVC/DataTypes/: Bitmap.cpp  Bitmap.h  BitmapItem.cpp  BitmapItem.h  ControllerInputEvent.h  Item.h  ItemList.cpp  ItemList.h  LabelItem.cpp  LabelItem.h  Observer.h  StateMachine.h  list.h  queue.h  string.h  vector.h
Test_MVC/Figures/: Composite.h  Figure.cpp  Figure.h  ItemBox.cpp  ItemBox.h  Label.cpp  Label.h  MenuWindow.h  TextBox.h  make_unique.h
Test_MVC/Input/: input.cpp  input_cpp.h
Test_MVC/MVC/: Controller.cpp  Controller.h  MessagePacket.h  Model.h  ModelStateService.h
Test_MVC/MVC/Process/: StateInputTest1.cpp  StateInputTest1.h  StateInputTest2.cpp  StateInputTest2.h  StateMainLogo.cpp  StateMainLogo.h  StateTransactionTypeMenu.cpp  StateTransactionTypeMenu.h
Test_MVC/MVC/States/: StateInput.h  StateItems.cpp  StateItems.h  StateLogo.h  StateLogos.cpp  StateLogos.h  StateMachine.h  StateMenu.cpp  StateMenu.h  StateTest.cpp  StateTest.h
Test_MVC/MVC/ViewModels/: InputViewModel.h  LogoViewModel.h  ViewModel.h
Test_MVC/MVC/Views/: InputView.h  LogoView.h  MenuView.cpp  MenuView.h  View.cpp  View.h  ViewService.cpp  ViewService.h
Test_MVC/Test/Views/: InputViewTest.h  LogoViewTest.h
modules/: pic32_toolchain.cmake
